--- a/芥子帝国/Public_layer/UI_logic/loginAndRegister/ForgetPwd/ForgetPwdViewController.xib
+++ b/芥子帝国/Public_layer/UI_logic/loginAndRegister/ForgetPwd/ForgetPwdViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YlB-gv-HBy">
-                    <rect key="frame" x="265" y="40" width="90" height="40"/>
+                    <rect key="frame" x="265" y="20" width="90" height="40"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="90" id="eaO-2Z-xEk"/>
@@ -40,7 +39,7 @@
                     </connections>
                 </button>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入4位验证码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aps-az-iDM">
-                    <rect key="frame" x="20" y="100" width="335" height="40"/>
+                    <rect key="frame" x="20" y="80" width="335" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="zkA-Gy-bKH"/>
                     </constraints>
@@ -48,7 +47,7 @@
                     <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入11位手机号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IuI-KU-1Xz">
-                    <rect key="frame" x="20" y="40" width="237" height="40"/>
+                    <rect key="frame" x="20" y="20" width="237" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="5Le-2n-fP7"/>
                     </constraints>
@@ -56,7 +55,7 @@
                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gcs-jF-h0a">
-                    <rect key="frame" x="20" y="160" width="335" height="40"/>
+                    <rect key="frame" x="20" y="140" width="335" height="40"/>
                     <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="FN0-lK-9r9"/>
@@ -72,19 +71,18 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Aps-az-iDM" secondAttribute="trailing" constant="20" id="7yG-ck-8mh"/>
+                <constraint firstAttribute="trailing" secondItem="Aps-az-iDM" secondAttribute="trailing" constant="20" id="7yG-ck-8mh"/>
                 <constraint firstItem="gcs-jF-h0a" firstAttribute="top" secondItem="Aps-az-iDM" secondAttribute="bottom" constant="20" id="Btn-Uk-d5N"/>
-                <constraint firstItem="IuI-KU-1Xz" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="Hdx-IG-Thd"/>
+                <constraint firstItem="IuI-KU-1Xz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="Hdx-IG-Thd"/>
                 <constraint firstItem="YlB-gv-HBy" firstAttribute="centerY" secondItem="IuI-KU-1Xz" secondAttribute="centerY" id="L7O-Dr-gu5"/>
-                <constraint firstItem="gcs-jF-h0a" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="LCb-dg-qQQ"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="gcs-jF-h0a" secondAttribute="trailing" constant="20" id="f3j-B8-rPJ"/>
-                <constraint firstItem="Aps-az-iDM" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="gke-LS-juY"/>
-                <constraint firstItem="YlB-gv-HBy" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="20" id="jRj-SL-ge1"/>
+                <constraint firstItem="gcs-jF-h0a" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="LCb-dg-qQQ"/>
+                <constraint firstAttribute="trailing" secondItem="gcs-jF-h0a" secondAttribute="trailing" constant="20" id="f3j-B8-rPJ"/>
+                <constraint firstItem="Aps-az-iDM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="gke-LS-juY"/>
+                <constraint firstItem="YlB-gv-HBy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="jRj-SL-ge1"/>
                 <constraint firstItem="Aps-az-iDM" firstAttribute="top" secondItem="YlB-gv-HBy" secondAttribute="bottom" constant="20" id="n7m-Db-J2N"/>
                 <constraint firstItem="YlB-gv-HBy" firstAttribute="leading" secondItem="IuI-KU-1Xz" secondAttribute="trailing" constant="8" id="ol3-C5-U16"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="YlB-gv-HBy" secondAttribute="trailing" constant="20" id="t9s-q2-ElR"/>
+                <constraint firstAttribute="trailing" secondItem="YlB-gv-HBy" secondAttribute="trailing" constant="20" id="t9s-q2-ElR"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
         </view>
     </objects>
 </document>
